# fuc

./: .gitignore  .yapf.conf  LICENSE  README.md  config.fuc  main.py  pyproject.toml  use.py
fuc_configs/: user_config.fuc
gifs/: Human-Verification.html  random.html
src/fuc/: InternalFuc.py  __init__.py  config.py  errors.py  parser.py  private.py  types.py
test/: conftest.py  helpers.py  test_config_basic.py  test_config_write.py  test_edge_cases.py  test_errors.py  test_formatter.py  test_integration_merge.py  test_integration_precedence.py  test_integration_provenance.py  test_integration_roundtrip.py  test_parser_cli.py  test_parser_file.py  test_parser_tokens.py  test_platform_paths.py  test_schema_introspection.py  test_tokenizer.py  test_type_casting.py  todo.md
