[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuc"
version = "0.1.0"
description = "A Python configuration library using command-line argument syntax"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "dev@scottv.id"}
]
keywords = ["configuration", "config", "cli", "dataclass", "settings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/fuc"
Repository = "https://github.com/yourusername/fuc"
Issues = "https://github.com/yourusername/fuc/issues"
Documentation = "https://github.com/yourusername/fuc#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/fuc"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers"]
